Process Specification - User Sub-system
Updated the Login and Edit Own Profile Use Cases and the Software
Requirements Document.

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1018,7 +1018,7 @@
 		Certain use cases require further information with regards to their function.\\ These use cases are specified further by means of process specification.
 		\subsubsection{User Sub-system}
 			\begin{figure}[H]
-				\includegraphics[width=4in]{../Diagrams/Process Specifications/act__Login__Login.jpg}
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/Login.jpg}
 				\caption{User - Login}
 			\end{figure}
 			\begin{figure}[H]
