Process Specification - Purge User from System
I've added the Purge User from System under the Admin section of the
User Sub-system in the Software Requirements document.

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1041,6 +1041,14 @@
 				\includegraphics[width=4in]{../Diagrams/Process Specifications/Add_Remove Users from Research Group.jpg}
 				\caption{Head of Research - Add/Remove All Users in a Research Group}
 			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/Add New User.jpg}
+				\caption{Admin - Add New User to System}
+			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/Purge User From System.jpg}
+				\caption{Admin - Purge User from System}
+			\end{figure}
 		
 		\subsection{Domain Model}\label{subsec:domainmodel}
 		The domain model is described in terms of class diagram.\\ Class diagrams contain information on the current class such as attributes and relationships to other classes.
