Process Specification - Notification Sub-System
I've added the Notification Sub-System activity diagrams in the Software
Requirements document.

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1016,7 +1016,7 @@
 	
 		\subsection{Process Specifications}\label{subsec:processspecification}
 		Certain use cases require further information with regards to their function.\\ These use cases are specified further by means of process specification.
-		\subsubsection{User Sub-system}
+		\subsubsection{User Sub-System}
 			\begin{figure}[H]
 				\includegraphics[width=4in]{../Diagrams/Process Specifications/Login.jpg}
 				\caption{User - Login}
@@ -1048,6 +1048,32 @@
 			\begin{figure}[H]
 				\includegraphics[width=4in]{../Diagrams/Process Specifications/Purge User From System.jpg}
 				\caption{Admin - Purge User from System}
+			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/Set User as Active_Inactive.jpg}
+				\caption{Admin - Set User as Active or Inactive}
+			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/View All User Profiles.jpg}
+				\caption{Admin - Search/View All Users in any Research Group}
+			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/Add_Remove User from any Research Group.jpg}
+				\caption{Admin - Add/Remove Users from any Research Group}
+			\end{figure}
+
+			\subsubsection{Notification Sub-System}
+			\begin{figure}[H]
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/Set Paper Deadline.jpg}
+				\caption{User - Set Paper Deadline}
+			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/Edit Paper Deadline.jpg}
+				\caption{User - Edit Paper Deadline}
+			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/Send Deadline Notification.jpg}
+				\caption{System - Send Deadline Notification}
 			\end{figure}
 		
 		\subsection{Domain Model}\label{subsec:domainmodel}
