Process Specification - Notification Sub-System
I've completed the Notification Sub-System activity diagrams and added
them to the Software Requirements document.

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1075,6 +1075,10 @@
 				\includegraphics[width=4in]{../Diagrams/Process Specifications/Send Deadline Notification.jpg}
 				\caption{System - Send Deadline Notification}
 			\end{figure}
+			\begin{figure}[H]
+				\includegraphics[width=4in]{../Diagrams/Process Specifications/Send Deadline Update Notification.jpg}
+				\caption{System - Send Deadline Update Notification}
+			\end{figure}
 		
 		\subsection{Domain Model}\label{subsec:domainmodel}
 		The domain model is described in terms of class diagram.\\ Class diagrams contain information on the current class such as attributes and relationships to other classes.
