Added list of figures to tex document and generated latest pdf

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -62,9 +62,10 @@
 	\end{titlepage}
 	
 	\cleardoublepage
-	\thispagestyle{empty}
+	\thispagestyle{empty}p
 	\tableofcontents
-	
+	\cleardoublepage
+	\listoffigures
 	\cleardoublepage
 	\setcounter{page}{1}
 	\section{Introduction}\label{sec:intro}
