Updated formatting of page 41

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1218,7 +1218,7 @@
 				\caption{Admin - Dump Database to File}
 			\end{figure}
 			
-		
+		\cleardoublepage
 		\subsection{Domain Model}\label{subsec:domainmodel}
 		The domain model is described in terms of class diagram.\\ Class diagrams contain information on the current class such as attributes and relationships to other classes.
 			\begin{figure}[h]				
