--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1221,7 +1221,7 @@
 		\cleardoublepage
 		\subsection{Domain Model}\label{subsec:domainmodel}
 		The domain model is described in terms of class diagram.\\ Class diagrams contain information on the current class such as attributes and relationships to other classes.
-			\begin{figure}[h]				
+			\begin{figure}[H]				
 				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/domainModel.jpg}
 				\caption{ Domain model - Classes related to each domain }
 			\end{figure}
@@ -1240,6 +1240,10 @@
 						\item Super User
 						\end{itemize}
 					\end{itemize}
+					\begin{figure}[H]				
+						\includegraphics[width=\linewidth]{../Diagrams/Domain Model/userDomain.jpg}
+						\caption{ User Domain }
+					\end{figure}
 					
 				\item \textbf{Authentication:}
 					\begin{itemize}
