--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -676,7 +676,7 @@
 					\end{itemize}
 					
 					\cleardoublepage
-					\item \textbf{Log Authentication Result} \hfill \textit{Priority: Critical}
+					\item \textbf{Log Authentication Response} \hfill \textit{Priority: Critical}
 					\begin{itemize}
 						\item The result of a login attempt should be logged for security reasons.
 						\item \textbf{Pre-conditions:}
@@ -688,6 +688,10 @@
 							\item An entry in the log needs to be made with all relevant details associated with the login attempt.
 						\end{itemize}
 						\item \textbf{Request and Results Data Structures:}
+						\begin{figure}[H]
+							\includegraphics[width=\linewidth]{../Diagrams/ServiceContracts/LogAuthenticationResponse.jpg}
+							\caption{Service Contract - Log Authentication Response}
+						\end{figure}
 					\end{itemize}
 					
 					\cleardoublepage
@@ -747,7 +751,7 @@
 						\item \textbf{Request and Results Data Structures:}
 						\begin{figure}[H]
 							\includegraphics[width=\linewidth]{../Diagrams/ServiceContracts/EditOwnUserProfile.jpg}
-							\caption{Service Contract - View Own User Profile}
+							\caption{Service Contract - Edit Own User Profile}
 						\end{figure}
 					\end{itemize}							
 				\end{itemize}
@@ -788,7 +792,7 @@
 						\item \textbf{Pre-conditions:}
 						\begin{itemize}
 							\item The user must be logged in.
-							\item The user must be the Head of Research of the particular group which they are wanting to search.
+							\item The user must be the Head of Research of the particular group which they are wanting to search/view.
 						\end{itemize}
 						\item \textbf{Post-conditions:}
 						\begin{itemize}
@@ -797,8 +801,18 @@
 							\item The action should be logged.
 						\end{itemize}
 						\item \textbf{Request and Results Data Structures:}
+						\begin{figure}[H]
+							\includegraphics[width=\linewidth]{../Diagrams/ServiceContracts/SearchUsersInOwnGroup.jpg}
+							\caption{Service Contract - Search Users in Own Group}
+						\end{figure}
+						\begin{figure}[H]
+							\includegraphics[width=\linewidth]{../Diagrams/ServiceContracts/ViewUserInOwnGroup.jpg}
+							\caption{Service Contract - View User in Own Group}
+						\end{figure}
 					\end{itemize}
 				\end{itemize}
+				
+				\cleardoublepage
 				\textbf{Admin:}
 				
 				\begin{itemize}
@@ -816,8 +830,13 @@
 							\item The action should be logged.
 						\end{itemize}
 						\item \textbf{Request and Results Data Structures:}
+						\begin{figure}[H]
+							\includegraphics[width=\linewidth]{../Diagrams/ServiceContracts/AddNewUser.jpg}
+							\caption{Service Contract - Add New User}
+						\end{figure}
 					\end{itemize}
 					
+					\cleardoublepage
 					\item \textbf{Search/View All Users in Any Research Group} \hfill \textit{Priority: Critical}
 					\begin{itemize}
 						\item Admin users should be able to search through all of the users within the system as well as view their profiles and all associated data and papers.
@@ -833,8 +852,17 @@
 							\item This action should be logged.
 						\end{itemize}
 						\item \textbf{Request and Results Data Structures:}
+						\begin{figure}[H]
+							\includegraphics[width=\linewidth]{../Diagrams/ServiceContracts/SearchAllUsers.jpg}
+							\caption{Service Contract - Search All Users}
+						\end{figure}
+						\begin{figure}[H]
+							\includegraphics[width=\linewidth]{../Diagrams/ServiceContracts/ViewAllUserProfiles.jpg}
+							\caption{Service Contract - View All User Profiles}
+						\end{figure}
 					\end{itemize}
 					
+					\cleardoublepage
 					\item \textbf{Purge User from System} \hfill \textit{Priority: Nice-to-Have}
 					\begin{itemize}
 						\item An admin user must be able to permanently remove a user and all of their associated information from the system.
@@ -850,8 +878,13 @@
 							\item The action should be logged.
 						\end{itemize}
 						\item \textbf{Request and Results Data Structures:}
+						\begin{figure}[H]
+							\includegraphics[width=\linewidth]{../Diagrams/ServiceContracts/PurgeUserFromSystem.jpg}
+							\caption{Service Contract - Purge User From System}
+						\end{figure}
 					\end{itemize}
 					
+					\cleardoublepage
 					\item \textbf{Set User as Active/Inactive} \hfill \textit{Priority: Important}
 					\begin{itemize}
 						\item An admin user should be able to set the status of a user to active or inactive, allowing the user to login or preventing them from continuing to interact with the system.
