Made link bigger

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -52,8 +52,8 @@
 			}\\
 			[4cm]
 
-		\textsc{\Large GitHub Repository - Team Charlie}\\[2mm]
-		  For more information, please click \href{https://github.com/DillonHeins/Charlie}{here}
+		\href{https://github.com/DillonHeins/Charlie}{\textsc{\Large GitHub Repository - Team Charlie}\\[2mm]
+		  For more information, please click here}
 			
 		\end{center}	
 		\begin{flushright}
