Modified authenticationDomain.jpg to not include relationships as I think figure 35 shows sufficient relationship information. Added the authenticationDomain.jpg to pdf as well.

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1254,6 +1254,7 @@
 		\cleardoublepage
 		\subsection{Domain Model}\label{subsec:domainmodel}
 		The domain model is described in terms of class diagram.\\ Class diagrams contain information on the current class such as attributes and relationships to other classes.
+		
 			\begin{figure}[H]				
 				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/domainModel.jpg}
 				\caption{ Domain model - Classes related to each domain }
@@ -1273,10 +1274,6 @@
 						\item Super User
 						\end{itemize}
 					\end{itemize}
-					\begin{figure}[H]				
-						\includegraphics[width=\linewidth]{../Diagrams/Domain Model/userDomain.jpg}
-						\caption{ User Domain }
-					\end{figure}
 					
 				\item \textbf{Authentication:}
 					\begin{itemize}
@@ -1316,6 +1313,16 @@
 					\end{itemize}				
 				
 			\end{itemize}
+			
+			\begin{figure}[H]				
+				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/userDomain.jpg}
+				\caption{ User Domain - without relationships. To see relationships refer to Figure 35 }
+			\end{figure}
+			
+			\begin{figure}[H]				
+				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/authenticationDomain.jpg}
+				\caption{ Authentication Domain - without relationships. To see relationships refer to Figure 35}
+			\end{figure}
 		
 	\cleardoublepage
 	\section{Open Issues}\label{sec:issues}
