added general uses subsection

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -69,6 +69,19 @@
 	\cleardoublepage
 	\setcounter{page}{1}
 	\section{Introduction}\label{sec:intro}
+	\subsection{General Uses}\label{subsec:purpose}
+		General uses of this system should include keeping track of:
+            \begin{itemize}  
+            
+                \item Research Papers and publications created by users of the system.
+                \item Reporting.
+                \item Research Groups.
+                \item Running Costs.
+                \item All historical publications that have been created.
+                \item List of authors that helped contribute to the publications.
+                \item List of users of the system.
+                \item Units and respective conferences that the publications belong to.
+            \end{itemize}
 		\subsection{Purpose}\label{subsec:purpose}
 			The purpose of this document is to give a detailed explanation and description of the P.A.P.E.R.S system. This document will illustrate the purpose as well as the features of said system, the interfaces of the system, the functionality of the system, the constraints under which it must operate and how the system will integrate with external systems. This document has been created for use by the developers of the system, the proposed client as well as any other additional third party collaborators who require to understand the software specifications of the P.A.P.E.R.S system.
 		
