--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -70,7 +70,7 @@
 	\setcounter{page}{1}
 	\section{Introduction}\label{sec:intro}
 	P.A.P.E.R.S (Publication and Papers Electronic Repository System), a project proposed by the University of Pretoria’s department of Computer Science, is a interdepartmental system dedicated to the management of the research and publication records of each user of the system. The objective of the system is to create an environment where users of the system can maintain a list of publications belonging to them and where supervisors, such as a research leader or head of department, could oversea progress of said users. Users can belong to research groups and maintain a record of who contributed to a publication and thus will consequently affect the unit score each user has. Only members of the department of Computer Science can be users of the system. 
-	\subsection{General Uses}\label{subsec:purpose}
+	\subsection{General Uses}\label{subsec:generaluses}
 		General uses of this system should include keeping track of:
             \begin{itemize}  
             
@@ -85,6 +85,9 @@
             \end{itemize}
 		\subsection{Purpose}\label{subsec:purpose}
 			This document serves to explore the minutiae and requirements of the P.A.P.E.R.S system. This is including but not limited to the overall features of the system, interfaces, functionality, constraints and integration. The intended audience of the system is for the developers to be used as a reference tool and for the clients as an informative resource. Any third party collaborators who have a need to use a reference to the P.A.P.E.R.S system may also use this documentation.
+		\subsection{Structure}\label{subsec:structure}
+			The structure of the document is to allow an overview of the system through domain models, use-case diagrams, pre and post conditions and a general analysis of the system as a whole.
+		
 		
 	\cleardoublepage	
 	\section{Vision}\label{sec:vision}
