--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -82,6 +82,7 @@
                 \item List of authors that helped contribute to the publications.
                 \item List of users of the system.
                 \item Units and respective conferences that the publications belong to.
+                \item Further explaination of the system in Section 2, Vision.
             \end{itemize}
 		\subsection{Purpose}\label{subsec:purpose}
 			This document serves to explore the minutiae and requirements of the P.A.P.E.R.S system. This is including but not limited to the overall features of the system, interfaces, functionality, constraints and integration. The intended audience of the system is for the developers to be used as a reference tool and for the clients as an informative resource. Any third party collaborators who have a need to use a reference to the P.A.P.E.R.S system may also use this documentation.
