Added notificationsDomain.jpg to tex

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1360,17 +1360,22 @@
 			
 			\begin{figure}[H]				
 				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/userDomain.jpg}
-				\caption{ User Domain - without relationships. To see relationships, refer to Figure 35 }
+				\caption{ User Domain - without relationships. To see relationships, refer to Figure 41 }
 			\end{figure}
 			
 			\begin{figure}[H]				
 				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/authenticationDomain.jpg}
-				\caption{ Authentication Domain - without relationships. To see relationships, refer to Figure 35}
+				\caption{ Authentication Domain - without relationships. To see relationships, refer to Figure 41}
 			\end{figure}
 			
 			\begin{figure}[H]				
 				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/reportsDomain.jpg}
-				\caption{ Reports Domain - without relationships. To see relationships, refer to Figure 35}
+				\caption{ Reports Domain - without relationships. To see relationships, refer to Figure 41}
+			\end{figure}
+			
+			\begin{figure}[H]				
+				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/notificationsDomain.jpg}
+				\caption{ Notifications Domain - without relationships. To see relationships, refer to Figure 41}
 			\end{figure}
 		
 	\cleardoublepage
