Added publicationDomain.jpeg to the Tex

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1377,6 +1377,11 @@
 				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/notificationsDomain.jpg}
 				\caption{ Notifications Domain - without relationships. To see relationships, refer to Figure 41}
 			\end{figure}
+			
+			\begin{figure}[H]				
+				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/publicationDomain.jpg}
+				\caption{ Publication Domain - without relationships. To see relationships, refer to Figure 41}
+			\end{figure}
 		
 	\cleardoublepage
 	\section{Open Issues}\label{sec:issues}
