Updated formatting and built latest pdf

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -206,13 +206,14 @@
 				\end{itemize}
 			\end{itemize}
 		
+		\cleardoublepage
 		\subsection{Integration Requirements}\label{subsec:integration}
 			\begin{itemize}
 			  	\item The first item
 			  	\item The second item
 			  	\item The third etc \ldots
 			\end{itemize}
-		
+				
 		\subsection{Architecture Constraints}\label{subsec:constraints}
 			\begin{itemize}
 				\item The system will be a web based program accessible via browser with an API for Android access.
