Updated DomainModel and updated formatting of tex, built latest pdf

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -62,7 +62,7 @@
 	\end{titlepage}
 	
 	\cleardoublepage
-	\thispagestyle{empty}p
+	\thispagestyle{empty}
 	\tableofcontents
 	\cleardoublepage
 	\listoffigures
@@ -1315,8 +1315,7 @@
 						\item User
 						\item Admin
 						\item Research Leader
-						\item Head Of Department
-						\item Super User
+						\item Head Of Department (Super User)
 						\end{itemize}
 					\end{itemize}
 					
