Service contracts reporting sub system - completed

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1060,8 +1060,14 @@
 							\item This action should be logged.
 						\end{itemize}
 						\item \textbf{Request and Results Data Structures:}
+						\begin{figure}[H]
+							\includegraphics[width=\linewidth]{../Diagrams/ServiceContracts/GenerateReportForGroup.jpg}
+							\caption{Service Contract - Generate Report for Group}
+						\end{figure}
 					\end{itemize}
 				\end{itemize}
+				
+				\cleardoublepage
 				\textbf{Admin:}
 				\begin{itemize}
 					\item \textbf{Generate Report for Department} \hfill \textit{Priority: Critical}
@@ -1078,8 +1084,13 @@
 							\item The action should be logged.
 						\end{itemize}
 						\item \textbf{Request and Results Data Structures:}
+						\begin{figure}[H]
+							\includegraphics[width=\linewidth]{../Diagrams/ServiceContracts/GenerateReportForDepartment.jpg}
+							\caption{Service Contract - Generate Report for Department}
+						\end{figure}
 					\end{itemize}
 
+					\cleardoublepage
 					\item \textbf{Dump Database to File} \hfill \textit{Priority: Critical}
 					\begin{itemize}
 						\item An admin user should be able to at any point dump all of the information within the database into a file for safekeeping, such as a CSV file.
@@ -1094,8 +1105,14 @@
 							\item This action should be logged.
 						\end{itemize}
 						\item \textbf{Request and Results Data Structures:}
+						\begin{figure}[H]
+							\includegraphics[width=\linewidth]{../Diagrams/ServiceContracts/DumpDatabaseToFile.jpg}
+							\caption{Service Contract - Dump Database to File}
+						\end{figure}
 					\end{itemize}
 				\end{itemize}
+			
+			\cleardoublepage
 			\subsubsection{Group-Control Sub-System}\label{subsubsec:group}
 				Handles the creating and removing of research groups, as well as the allocating of heads of research groups and the editing of individual research groups associated metadata.\\
 				[3mm]
