Updated Intergration requirements, PDF need path updates for figures

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -70,11 +70,8 @@
 	\setcounter{page}{1}
 	\section{Introduction}\label{sec:intro}
 	P.A.P.E.R.S (Publication and Papers Electronic Repository System), a project proposed by the University of Pretoria’s department of Computer Science, is a interdepartmental system dedicated to the management of the research and publication records of each user of the system. The objective of the system is to create an environment where users of the system can maintain a list of publications belonging to them and where supervisors, such as a research leader or head of department, could oversea progress of said users. Users can belong to research groups and maintain a record of who contributed to a publication and thus will consequently affect the unit score each user has. Only members of the department of Computer Science can be users of the system. 
-<<<<<<< HEAD
-	\subsection{General Uses}\label{subsec:uses}
-=======
+	
 	\subsection{General Uses}\label{subsec:generaluses}
->>>>>>> a588da90d20fa8a91aad1e6ca409b912d12a8e27
 		General uses of this system should include keeping track of:
             \begin{itemize}  
             
@@ -212,10 +209,13 @@
 		
 		\cleardoublepage
 		\subsection{Integration Requirements}\label{subsec:integration}
+		The system will make use of:
 			\begin{itemize}
-			  	\item The first item
-			  	\item The second item
-			  	\item The third etc \ldots
+			  	\item HTML5 as this can easily be translated to Android applications
+			  	\item Cordova/PhoneGap (HTML to Android framework)
+			  	\item Lungo (Android framework based on HTML5 an CSS3)
+			  	\item Sencha Touch (HTML5 Framework for Android)
+			  	\item Android Studio (Final changes to ensure compatibility)
 			\end{itemize}
 				
 		\subsection{Architecture Constraints}\label{subsec:constraints}
