--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -6,6 +6,7 @@
 \usepackage[space]{grffile}
 \usepackage{hyperref}
 \usepackage[export]{adjustbox}
+\usepackage{multicol}
 
 % Header and footer
 \usepackage{fancyhdr}
@@ -1333,94 +1334,58 @@
 				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/domainModel.jpg}
 				\caption{ Domain model - Classes related to each domain }
 			\end{figure}
-			
-			\clearpage
-		\textbf{Domains include :}
+			\begin{center}
+			\textbf{Domains include :}
+			\end{center}
+		\begin{multicols}{2}
+		
 			\begin{itemize} 
 				\item \textbf{User Domain:}
-					\begin{itemize}
-					\item Classes:
 						\begin{itemize}
 						\item User
 						\item UserCredentials
 						\item Author
 						\end{itemize}
-					\end{itemize}
 					
 				\item \textbf{Logging Domain:}
-					\begin{itemize}
-					\item Classes:
 						\begin{itemize}
 						\item LogHandler
 						\item LogFile
-						\end{itemize}
-					\end{itemize}					
+						\end{itemize}				
 					
 					
 				\item \textbf{Group Control Domain:}
-					\begin{itemize}
-					\item Classes:
 						\begin{itemize}
 						\item ResearchGroup
 						\end{itemize}
-					\end{itemize}
+						
+					\columnbreak
+
 					
-				\item \textbf{Reports:}
-					\begin{itemize}
-					\item { Classes:}
+				\item \textbf{Reports Domain:}
+
 						\begin{itemize}
 						\item ReportGenerator
 						\item Report
 						\end{itemize}
-					\end{itemize}
 					
-				\item \textbf{Notifications:}
-					\begin{itemize}
-					\item { Classes:}
+				\item \textbf{Notifications Domain:}
 						\begin{itemize}
 						\item NotificationHandler
 						\item Notification
 						\end{itemize}
-					\end{itemize}
+
 					
-				\item \textbf{Publication:}
-					\begin{itemize}
-					\item { Classes:}
+				\item \textbf{Publication Domain:}
 						\begin{itemize}
 						\item Publication
 						\item PublicationType
 						\item Conference
 						\item Journal
-						\end{itemize}
-					\end{itemize}				
+						\end{itemize}		
 				
 			\end{itemize}
-			
-			\begin{figure}[H]				
-				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/userDomain.jpg}
-				\caption{ User Domain - without relationships. To see relationships, refer to Figure 41 }
-			\end{figure}
-			
-			\begin{figure}[H]				
-				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/authenticationDomain.jpg}
-				\caption{ Authentication Domain - without relationships. To see relationships, refer to Figure 41}
-			\end{figure}
-			
-			\begin{figure}[H]				
-				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/reportsDomain.jpg}
-				\caption{ Reports Domain - without relationships. To see relationships, refer to Figure 41}
-			\end{figure}
-			
-			\begin{figure}[H]				
-				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/notificationsDomain.jpg}
-				\caption{ Notifications Domain - without relationships. To see relationships, refer to Figure 41}
-			\end{figure}
-			
-			\begin{figure}[H]				
-				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/publicationDomain.jpg}
-				\caption{ Publication Domain - without relationships. To see relationships, refer to Figure 41}
-			\end{figure}
-		
+		\end{multicols}
 	\cleardoublepage
 	\section{Open Issues}\label{sec:issues}
 	Issues that weren't discussed in the client requirements meeting:
